--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Amin, welcome spring boot security page!</h1>
-
+<h1>Тут будет список всех пользователей</h1>
 
 </body>
 </html>
