--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>User, welcome spring boot security page!</h1>
-
+<h1>Тут будет выведена информация о пользователе</h1>
 
 </body>
 </html>
