--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -4,14 +4,47 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Информация о пользователе</title>
+    <title>Панель администратора</title>
 </head>
 <body>
-<h1>Admin, welcome spring boot security page!</h1>
-<h1>Тут будет выведена информация о ВСЕХ пользователях</h1>
-<div class="text-center">
-    <br>
+
+<h3>Администратор: <td th:text="${ user.getName()}"/>
     <a class="btn btn-outline-primary" href="/logout" role="button">ВЫХОД</a>
-</div>
+</h3>
+<table class="table table-striped">
+    <tr>
+        <th> Id</th>
+        <th> Имя</th>
+        <th> Фамилия</th>
+        <th> Имя пользователя</th>
+        <th> Роль </th>
+        <th> Возраст</th>
+        <th> e-mail</th>
+        <th> Действия </th>
+    </tr>
+
+    <tr th:each=" user : ${ showAllUsers } ">
+        <td><h6 th:text="${user.getId()}"/></td>
+        <td><h6 th:text="${user.getName()}"/></td>
+        <td><h6 th:text="${user.getSurName()}"/></td>
+        <td><h6 th:text="${user.getUsername()}"/></td>
+        <td><h6 th:text="${user.getAuthorities()}"/></td>
+        <td><h6 th:text="${user.getAge()}"/></td>
+        <td><h6 th:text="${user.getEmail()}"/></td>
+
+        <td>
+            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                <form th:method="GET" th:action="@{/admin/{id}/edit(id=${user.getId()})}">
+                    <button type="submit" class="btn btn-outline-primary">Редактировать</button>
+                </form>
+                <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
+                    <button type="submit" class="btn btn-outline-primary">Удалить</button>
+                </form>
+            </div>
+        </td>
+    </tr>
+</table>
+<br>
+<a class="btn btn-outline-primary" href="/admin/newUser" role="button">Новый пользователь</a>
 </body>
 </html>
