--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -6,5 +6,44 @@
 </head>
 <body>
 <h1> Редактируем данные пользователя </h1>
+
+<body>
+<form th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
+    <label for="name"> Имя: </label>
+    <input type="text" th:field="*{name}" id="name"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">error</div>
+    <br>
+    <br>
+    <label for="surName"> Фамилия: </label>
+    <input type="text" th:field="*{surName}" id="surName"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('surName')}" th:errors="*{surName}">error</div>
+    <br>
+    <br>
+    <label for="surName"> Имя пользователя: </label>
+    <input type="text" th:field="*{username}" id="username"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">error</div>
+    <br>
+
+    <label>Role:
+        <select size="2" multiple name="roles" >
+            <option value="1">USER</option>
+            <option selected="selected" value="2">ADMIN</option>
+        </select>
+    </label>
+
+    <label for="age"> Возраст: </label>
+    <input type="text" th:field="*{age}" id="age"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">error</div>
+    <br>
+    <br>
+    <label for="eMail"> Е-майл: </label>
+    <input type="text" th:field="*{email}" id="email"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</div>
+    <br>
+    <br>
+    <input type="submit" value="Добавить">
+</form>
+</body>
+
 </body>
 </html>
