--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -5,6 +5,43 @@
     <title>newUser</title>
 </head>
 <body>
-<h1> Добавляем нового пользователя </h1>
+<form th:method="POST" th:action="@{/admin}" th:object="${user}">
+    <label for="name"> Имя: </label>
+    <input type="text" th:field="*{name}" id="name"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">error</div>
+    <br>
+    <br>
+    <label for="surName"> Фамилия: </label>
+    <input type="text" th:field="*{surName}" id="surName"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('surName')}" th:errors="*{surName}">error</div>
+    <br>
+    <label for="username"> Имя пользователя: </label>
+    <input type="text" th:field="*{username}" id="username"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">error</div>
+    <br>
+    <label for="password"> Пароль: </label>
+    <input type="text" th:field="*{password}" id="password"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">error</div>
+    <br>
+    <label>Role:
+        <select size="2" multiple name="roles" >
+            <option value="1">USER</option>
+            <option selected="selected" value="2">ADMIN</option>
+        </select>
+    </label>
+    <br>
+    <label for="age"> Возраст: </label>
+    <input type="text" th:field="*{age}" id="age"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">error</div>
+    <br>
+    <br>
+    <label for="email"> Е-майл: </label>
+    <input type="text" th:field="*{email}" id="email"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</div>
+    <br>
+    <br>
+
+    <input type="submit" value="Добавить">
+</form>
 </body>
 </html>
