--- a/src/main/resources/templates/showUser.html
+++ b/src/main/resources/templates/showUser.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>userInfo</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>usersList</title>
 </head>
 <body>
-<h1> Тут будет выведена инфо пользователя !</h1>
+
+<h3> Страница пользователя:  <td th:text="${ user.getName()}"/> </h3>
+
+
+<table class="table table-striped">
+    <tr>
+        <th> Id</th>
+        <th> Имя</th>
+        <th> Фамилия</th>
+        <th> Имя пользователя</th>
+        <th> Роль </th>
+        <th> Возраст</th>
+        <th> e-mail</th>
+    </tr>
+
+    <tr th:object="${user}">
+        <td><h6 th:text="${user.getId()}"/></td>
+        <td><h6 th:text="${user.getName()}"/></td>
+        <td><h6 th:text="${user.getSurName()}"/></td>
+        <td><h6 th:text="${user.getUsername()}"/></td>
+        <td><h6 th:text="${user.getAuthorities()}"/></td>
+        <td><h6 th:text="${user.getAge()}"/></td>
+        <td><h6 th:text="${user.getEmail()}"/></td>
+
+    </tr>
+</table>
+<a class="btn btn-outline-primary" href="/logout" role="button">ВЫХОД</a>
 </body>
 </html>
