--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<h3>Администратор: <td th:text="${ user.getName()}"/>
+<h3>Администратор:
+    <td th:text="${ user.getName()}"/>
     <a class="btn btn-outline-primary" href="/logout" role="button">ВЫХОД</a>
 </h3>
 <table class="table table-striped">
@@ -17,10 +18,10 @@
         <th> Имя</th>
         <th> Фамилия</th>
         <th> Имя пользователя</th>
-        <th> Роль </th>
+        <th> Роль</th>
         <th> Возраст</th>
         <th> e-mail</th>
-        <th> Действия </th>
+        <th> Действия</th>
     </tr>
 
     <tr th:each=" user : ${ showAllUsers } ">
