--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>edit</title>
@@ -7,8 +7,8 @@
 <body>
 <h1> Редактируем данные пользователя </h1>
 
-<body>
 <form th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
+    <input type="hidden" name="_method" value="PATCH"/>
     <label for="name"> Имя: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <div style="color: coral" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">error</div>
@@ -23,14 +23,27 @@
     <input type="text" th:field="*{username}" id="username"/>
     <div style="color: coral" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">error</div>
     <br>
+    <br>
+    <label for="password"> Пароль: </label>
+    <input type="text" th:field="*{password}" id="password"/>
+    <div style="color: coral" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">error</div>
+    <br>
+    <br>
+    <div class="field">
+        <label>Доступные роли:</label>
+        <div th:each="role: ${userRoles}">
 
-    <label>Role:
-        <select size="2" multiple name="roles" >
-            <option value="1">USER</option>
-            <option selected="selected" value="2">ADMIN</option>
-        </select>
-    </label>
+            <label>
+                <input type="checkbox" name="roles"
+                       th:text="${role.getRole()}"
+                       th:value="${role.getId()}"
+                       th:field="*{roles}"/>
+            </label>
+        </div>
 
+    </div>
+    <br>
+    <br>
     <label for="age"> Возраст: </label>
     <input type="text" th:field="*{age}" id="age"/>
     <div style="color: coral" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">error</div>
@@ -43,7 +56,6 @@
     <br>
     <input type="submit" value="Добавить">
 </form>
-</body>
 
 </body>
 </html>
