--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -15,20 +15,31 @@
     <input type="text" th:field="*{surName}" id="surName"/>
     <div style="color: coral" th:if="${#fields.hasErrors('surName')}" th:errors="*{surName}">error</div>
     <br>
+    <br>
     <label for="username"> Имя пользователя: </label>
     <input type="text" th:field="*{username}" id="username"/>
     <div style="color: coral" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">error</div>
+    <br>
     <br>
     <label for="password"> Пароль: </label>
     <input type="text" th:field="*{password}" id="password"/>
     <div style="color: coral" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">error</div>
     <br>
-    <label>Role:
-        <select size="2" multiple name="roles" >
-            <option value="1">USER</option>
-            <option selected="selected" value="2">ADMIN</option>
-        </select>
-    </label>
+    <br>
+    <div class="field">
+        <label>Доступные роли:</label>
+        <div th:each="role: ${userRoles}">
+
+            <label>
+                <input type="checkbox" name="roles"
+                       th:text="${role.getRole()}"
+                       th:value="${role.getId()}"
+                       th:field="*{roles}"/>
+            </label>
+        </div>
+
+    </div>
+    <br>
     <br>
     <label for="age"> Возраст: </label>
     <input type="text" th:field="*{age}" id="age"/>
@@ -40,7 +51,6 @@
     <div style="color: coral" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</div>
     <br>
     <br>
-
     <input type="submit" value="Добавить">
 </form>
 </body>
