--- a/src/main/resources/templates/showUser.html
+++ b/src/main/resources/templates/showUser.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<h3> Страница пользователя:  <td th:text="${ user.getName()}"/> </h3>
+<h3> Страница пользователя:
+    <td th:text="${ user.getName()}"/> </h3>
 
 
 <table class="table table-striped">
