--- a/src/main/resources/templates/showUser.html
+++ b/src/main/resources/templates/showUser.html
@@ -1,39 +1,62 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>usersList</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/style.css" th:href="@{/static/style.css}" type="text/css"/>
+    <title>userHomePage</title>
 </head>
-<body>
+<body class="bg-light">
+<nav class="navbar navbar-dark bg-dark" style="display: block; color: white">
+    <div class="container-fluid">
+        <span id="myUserDetails" class="navbar-brand ">
+        </span>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" class="btn btn-link text-white-50" value="Logout"/>
+        </form>
+    </div>
+</nav>
 
-<h3> Страница пользователя:
-    <td th:text="${ user.getName()}"/> </h3>
+<div class="block-left custom-col-left back-white">
+    <nav class="nav flex-column nav-pills">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/user">User</a>
+        </li>
+    </nav>
+</div>
 
+<div class="block-right section">
+    <h2>User information-page</h2>
+    <div class="border">
+        <div class="card" style="width: 100%;">
+            <div class="card-body">
+                <h5 class="card-header">About User</h5>
 
-<table class="table table-striped">
-    <tr>
-        <th> Id</th>
-        <th> Имя</th>
-        <th> Фамилия</th>
-        <th> Имя пользователя</th>
-        <th> Роль </th>
-        <th> Возраст</th>
-        <th> e-mail</th>
-    </tr>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">UserName</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Role</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tableUser">
 
-    <tr th:object="${user}">
-        <td><h6 th:text="${user.getId()}"/></td>
-        <td><h6 th:text="${user.getName()}"/></td>
-        <td><h6 th:text="${user.getSurName()}"/></td>
-        <td><h6 th:text="${user.getUsername()}"/></td>
-        <td><h6 th:text="${user.getAuthorities()}"/></td>
-        <td><h6 th:text="${user.getAge()}"/></td>
-        <td><h6 th:text="${user.getEmail()}"/></td>
-
-    </tr>
-</table>
-<a class="btn btn-outline-primary" href="/logout" role="button">ВЫХОД</a>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    </br>
+</div>
+</div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+<script src="/static/user.js"></script>
 </body>
 </html>
