--- a/src/main/resources/templates/showUser.html
+++ b/src/main/resources/templates/showUser.html
@@ -13,7 +13,13 @@
 <header>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand">with role: USER</a>
+            <a class="navbar-brand"> <strong> <td th:text="${user.getEmail()}"/> </strong> with roles:
+                <td>
+                            <span th:each="role : ${user.getRoles()}"
+                                  th:text="${role.getRole().replace('ROLE_', '') + ' '}">
+                            </span>
+                </td>
+            </a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
