--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,8 +14,8 @@
     <form class="form-signin" method="post" action="/login">
         <h2 class="form-signin-heading">Please sign in</h2>
         <p>
-            <label for="name" class="sr-only">Enter e-mail address</label>
-            <input type="text" id="name" name="name" class="form-control"
+            <label for="email" class="sr-only">Enter e-mail address</label>
+            <input type="text" id="email" name="email" class="form-control"
                    placeholder="Enter e-mail address" required="" autofocus="">
         </p>
         <p>
