Добавлен инициализатор ГОТОВО

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -142,13 +142,13 @@
                                                                                th:name="id"
                                                                                readonly>
                                                                     </div>
-                                                                    <div>
-                                                                        <label for="user-username"
-                                                                               class="col-form-label fw-bold">U:</label>
-                                                                        <input type="text" class="form-control"
-                                                                               id="user-username" th:value="${user.username}"
-                                                                               th:name="username">
-                                                                    </div>
+<!--                                                                    <div>-->
+<!--                                                                        <label for="user-username"-->
+<!--                                                                               class="col-form-label fw-bold">U:</label>-->
+<!--                                                                        <input type="text" class="form-control"-->
+<!--                                                                               id="user-username" th:value="${user.username}"-->
+<!--                                                                               th:name="username">-->
+<!--                                                                    </div>-->
 
                                                                     <div>
                                                                         <label for="user-firstname"
