--- a/src/main/resources/templates/showUser.html
+++ b/src/main/resources/templates/showUser.html
@@ -30,14 +30,24 @@
 </header>
 
 <div class="container-fluid d-flex flex-row vh-100 p-0">
+    <!--  левая часть с кнопками -->
     <div class="bg-white">
         <nav class="btn-group-vertical mt-3 mb-3">
-            <a sec:authorize="hasRole('ROLE_USER')" type="button" class="btn pr-5 text-start btn-primary active rounded"
-               style="width: 200px" role="button"
+            <!-- для работы sec:authorize требуется зависимость org.thymeleaf.extras в pom.xml -->
+            <a sec:authorize="hasRole('ROLE_ADMIN')" type="button"
+               class="btn pr-5 text-start btn-primary active rounded" style="width: 200px" role="button"
                aria-pressed="true"
-               data-toggle="button" th:href="@{/user}">User</a>
+               data-toggle="button"
+               th:href="@{/admin}">Admin</a>
+            <a type="button"
+               class="btn pr-5 text-start rounded" style="width: 200px" role="button"
+               aria-pressed="true"
+               data-toggle="button"
+               th:href="@{/user}">User</a>
+
         </nav>
     </div>
+<!--   правая часть с таблицей информации о пользователе -->
     <div class="flex-grow-1 bg-light p-3">
         <h1>User information-page</h1>
         <div class="container-fluid">
@@ -80,79 +90,3 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
-
-<!--<!doctype html>-->
-<!--<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">-->
-<!--<head>-->
-<!--    <meta charset="utf-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
-<!--          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
-
-<!--    <title>PP-3.1.4_Bootstrap</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--<header>-->
-<!--    <nav class="navbar navbar-dark bg-dark">-->
-<!--        <div class="container-fluid">-->
-<!--            <a class="navbar-brand">with role: USER</a>-->
-<!--            <ul class="navbar-nav ml-auto">-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="/logout">Logout</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </nav>-->
-<!--</header>-->
-
-<!--<div class="container-fluid d-flex flex-row vh-100 p-0">-->
-<!--    <div class="bg-white">-->
-<!--        <nav class="btn-group-vertical mt-3 mb-3">-->
-<!--            <a sec:authorize="hasRole('ROLE_ADMIN')"-->
-<!--               type="button" class="btn pr-5 text-start rounded"-->
-<!--               style="width: 200px" role="button"-->
-<!--               aria-pressed="true"-->
-<!--               data-toggle="button" th:href="@{/admin}">Admin</a>-->
-<!--            <a type="button" class="btn pr-5 text-start btn-primary active rounded"-->
-<!--               style="width: 200px" role="button"-->
-<!--               aria-pressed="true"-->
-<!--               data-toggle="button" th:href="@{/user}">User</a>-->
-<!--        </nav>-->
-<!--    </div>-->
-<!--    <div class="flex-grow-1 bg-light p-3">-->
-<!--        <h1>User information-page</h1>-->
-<!--        <div class="container-fluid">-->
-<!--            <div class="row border">-->
-<!--                <h5 class="m-2">About user</h5>-->
-<!--            </div>-->
-<!--            <div class="row border bg-white pb-2">-->
-<!--                <table class="table table-borderless m-3">-->
-<!--                    <thead>-->
-<!--                    <tr class="border-top">-->
-<!--                        <th scope="col">Username</th>-->
-<!--                        <th scope="col">age</th>-->
-<!--                        <th scope="col">Role</th>-->
-<!--                    </tr>-->
-<!--                    </thead>-->
-<!--                    <tbody>-->
-<!--                    <tr class="border-top bg-light" th:object="${user}">-->
-<!--                        <td th:text="${user.getUsername()}">UserName</td>-->
-<!--                        <td th:text="${user.getAge()}">Age</td>-->
-<!--                        <td>-->
-<!--                            <th:block th:each="role : *{getRoles()}">-->
-<!--                                &nbsp;<span th:text="${role.name}"/>-->
-<!--                            </th:block>-->
-<!--                        </td>-->
-<!--                    </tr>-->
-<!--                    </tbody>-->
-<!--                </table>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"-->
-<!--        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--</body>-->
-<!--</html>-->
