--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -188,6 +188,7 @@
                                                                 name="role" aria-label="size 2 select example">
                                                             <option value="1">ADMIN</option>
                                                             <option value="2">USER</option>
+                                                            <option value="3">GUEST</option>
                                                         </select>
                                                     </div>
                                                 </form>
