--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -397,8 +397,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<script type="text/javascript" src="/scriptJS/admin.js"></script>
-<script type="text/javascript" src="/scriptJS/user.js"></script>
+<script type="text/javascript" src="/admin.js"></script>
+<script type="text/javascript" src="/user.js"></script>
 
 </body>
 </html>
