Функционал добавление юзера - работает

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -61,7 +61,7 @@
                                 <th>Role</th>
                             </tr>
                             </thead>
-                            <tbody id="userTableBody">
+                            <tbody id="user-info-table">
                             </tbody>
                         </table>
                     </div>
