--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -17,7 +17,7 @@
             <a class="navbar-brand">with role: USER</a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="btn btn-outline-light" href="/logout" role="button">Logout</a>
                 </li>
             </ul>
         </div>
