Исправлено: 1. Добавлено REST в имена контроллеров 2. Работает со всех портов 3. Исправлена опечатка из-за которой неверно выводилась таблица пользователей.

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -76,6 +76,7 @@
                                             <th>First name</th>
                                             <th>Last name</th>
                                             <th>Age</th>
+                                            <th>email</th>
                                             <th>Role</th>
                                             <th>Edit</th>
                                             <th>Delete</th>
